// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component with nothing 1`] = `<div />`;

exports[`should show multiple examples 1`] = `
<div>
  <h1
    style={
      Object {
        "borderBottom": "1px solid #eaecef",
        "paddingBottom": "0.3em",
      }
    }
  >
    Examples
  </h1>
  <IndexExampleTemplate
    description="Describing the test"
    example={<test-file-stub />}
    exampleSrc="test-file-stub"
    title="Test Example 1"
  />
  <IndexExampleTemplate
    description="Describing the test mk. 2"
    example={<test-file-stub />}
    exampleSrc="test-file-stub"
    title="Test Example 2"
  />
</div>
`;

exports[`should show multiple props tables 1`] = `
<div>
  <PropsTable
    componentName="Test Component"
    src="test-file-stub"
  />
  <PropsTable
    componentName="Test Component (Again)"
    src="test-file-stub"
  />
</div>
`;

exports[`should show one example 1`] = `
<div>
  <h1
    style={
      Object {
        "borderBottom": "1px solid #eaecef",
        "paddingBottom": "0.3em",
      }
    }
  >
    Examples
  </h1>
  <IndexExampleTemplate
    description="Describing the test"
    example={<test-file-stub />}
    exampleSrc="test-file-stub"
    title="Test Example 1"
  />
</div>
`;

exports[`should show one props table 1`] = `
<div>
  <PropsTable
    componentName="Test Component"
    src="test-file-stub"
  />
</div>
`;

exports[`should show the readme 1`] = `
<div>
  <Markdown
    id="readme"
    src="test-file-stub"
  />
</div>
`;

exports[`should show the version 1`] = `
<div>
  <div
    id="version"
  >
    Version: 
    1.9
  </div>
</div>
`;

exports[`should show the version and readme 1`] = `
<div>
  <div
    id="version"
  >
    Version: 
    1.9
  </div>
  <Markdown
    id="readme"
    src="test-file-stub"
  />
</div>
`;

exports[`should show the version, readme, examples, and props tables 1`] = `
<div>
  <div
    id="version"
  >
    Version: 
    1.9
  </div>
  <Markdown
    id="readme"
    src="test-file-stub"
  />
  <h1
    style={
      Object {
        "borderBottom": "1px solid #eaecef",
        "paddingBottom": "0.3em",
      }
    }
  >
    Examples
  </h1>
  <IndexExampleTemplate
    description="Describing the test"
    example={<test-file-stub />}
    exampleSrc="test-file-stub"
    title="Test Example 1"
  />
  <IndexExampleTemplate
    description="Describing the test mk. 2"
    example={<test-file-stub />}
    exampleSrc="test-file-stub"
    title="Test Example 2"
  />
  <PropsTable
    componentName="Test Component"
    src="test-file-stub"
  />
  <PropsTable
    componentName="Test Component (Again)"
    src="test-file-stub"
  />
</div>
`;
